added optimizing compiler, graphviz support

--- a/LexDemo/LexDemo.csproj
+++ b/LexDemo/LexDemo.csproj
@@ -43,6 +43,8 @@
     <None Include="App.config" />
     <Content Include="identifier.lasm" />
     <Content Include="lexer.lasm" />
+    <None Include="dfa.lasm" />
+    <None Include="int.lasm" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LexContext\LexContext.csproj">
